# todo-sorter-gui

./: .dockerignore  .env  .gitignore  .repomix-output.txt  Cargo.toml  Dockerfile  Procfile  RAILWAY.md  README.md  dev.sh  docker-compose.yml  migration-helper.sh  milestones.md  nixpacks.toml  package-lock.json  package.json  railway-link-db.sh  railway-up.sh  railway.json  railway.toml  railway.yaml  ratings_ci.html  sqlx-data.json  start.sh  task-deletion-feature.md  vite.config.ts
.cargo/: config.toml
.sqlx/: metadata.json  query-05d34e4a1c1d6dc32c47db2ce7fb5d602ec9e32ed7d5ca61dbc52afff77bfb7d.json  query-2bd7ebed60bdf53dba292e7c1edf30e1b03af8a27c8c27dc0741a2b5aad08dd6.json  query-3f7a6fc5e385f335e9d4ad5f8e7a63d3a0b5af9d0c57b07f0e43564bc6f3fd7d.json  query-90cbdb92fc9c3f8308e61c08ce0cd02c8e32a5aaa2d0e44c9a32e28e6dbe5ec2.json  query-9b12ab57f3774b36b3c84ebce123eda5fd3ddd4a4c0f967ce05c5c801fe4c82a.json  query-a6eb2f5d63e6c1e962c27bc321fae62e4c98f36fbac6d2e9bdfeb7e0deb7c38b.json  query-b64c23f67f09db0c6c08fa15af037ec2385854e5cf3f76d3b4aec189d1d66c35.json  query-e7c81e1aad9995ce7e57b07e2f7a2c5c7c2a1107f0227c0fbfff7f81c79d8a93.json  query-f7a91c3f3bbe3b7b84c5a8d9c2f13a0a7b8d05ade7d8094c6bd0de7dd7f03e26.json
migrations/: 20240511000000_initial_schema.up.sql  20240701000000_create_tables.sql  20250511_create_tables.sql  init.sql
scripts/: db.sh  prepare.sh
src/: .repomix-output.txt  App.tsx  api.ts  asap_cpu.rs  auth.rs  changes-summary.md  db.rs  main.rs  mp.rs  plot_ci.rs  plot_ratings.rs  realtime.rs  sorter.rs  web_service.rs
static/: index.html
static/assets/: index-3FiLncYQ.js  index-B5UneTxg.css  index-B6o5GhaC.js  index-BFiG52it.css  index-BH7-EPcf.js  index-BifFBPFY.js  index-BnZftzkT.js  index-CUx_Fhqz.js  index-C_7t163A.css  index-CbrSUynQ.js  index-D2RE4xGn.js  index-DbDaUCDP.js  index-Dibhsj9s.css  index-DxEuMiyy.js  index-JXEA8Bvb.css  index-hSY9y-Pa.css  index-vC4X-pIo.css  index-zUD9gSWz.js
supabase/: config.toml
web/: .repomix-output.txt  Dockerfile  build.js  netlify.toml  nginx.conf  package-lock.json  package.json  rollup-fix.js  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.css  App.tsx  index.css  main.tsx
web/src/components/: ComparisonLog.tsx  ComparisonView.tsx  Editor.tsx  IdManager.tsx  TaskRankings.tsx  TaskSidebar.tsx
web/src/utils/: apiClient.ts  asapUtils.ts  markdownUtils.ts  sortingUtils.ts
