[package]
name = "sorter"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
libm = "*"
tempfile = "3.2"
console = "0.15.8"
either = "1.13.0"
tuple-map = "0.4.0"
# Web service dependencies
axum = "0.7.3"
tokio = { version = "1.35.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors"] }
static-files = "0.2.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
chrono = { version = "0.4.34", features = ["serde"] }

[profile.dev]
opt-level = 3
debug = 1
debug-assertions = false
overflow-checks = false
