[package]
name = "sorter"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
libm = "0.2.15"
tempfile = "3.2"
console = "0.15.8"
either = "1.13.0"
tuple-map = "0.4.0"
# Web service dependencies
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["cors"] }
static-files = "0.2.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
chrono = { version = "0.4.31", features = ["serde"] }
# Database dependencies
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json", "uuid", "time", "offline"] }
dotenv = "0.15.0"
uuid = { version = "1.4.1", features = ["v4", "serde"] }

[profile.dev]
opt-level = 3
debug = 1
debug-assertions = false
overflow-checks = false
